src/pep8_naming/snapshots/ruff__pep8_naming__tests__N801_N801.py.snap
---
source: src/pep8_naming/mod.rs
expression: checks
---
- kind:
    InvalidClassName: bad
  location:
    row: 1
    column: 0
  end_location:
    row: 2
    column: 8
  fix: ~
- kind:
    InvalidClassName: _bad
  location:
    row: 5
    column: 0
  end_location:
    row: 6
    column: 8
  fix: ~
- kind:
    InvalidClassName: bad_class
  location:
    row: 9
    column: 0
  end_location:
    row: 10
    column: 8
  fix: ~
- kind:
    InvalidClassName: Bad_Class
  location:
    row: 13
    column: 0
  end_location:
    row: 14
    column: 8
  fix: ~
- kind:
    InvalidClassName: BAD_CLASS
  location:
    row: 17
    column: 0
  end_location:
    row: 18
    column: 8
  fix: ~

