src/pep8_naming/snapshots/ruff__pep8_naming__tests__N802_N802.py.snap
---
source: src/pep8_naming/mod.rs
expression: checks
---
- kind:
    InvalidFunctionName: Bad
  location:
    row: 4
    column: 0
  end_location:
    row: 5
    column: 8
  fix: ~
- kind:
    InvalidFunctionName: _Bad
  location:
    row: 8
    column: 0
  end_location:
    row: 9
    column: 8
  fix: ~
- kind:
    InvalidFunctionName: BAD
  location:
    row: 12
    column: 0
  end_location:
    row: 13
    column: 8
  fix: ~
- kind:
    InvalidFunctionName: BAD_FUNC
  location:
    row: 16
    column: 0
  end_location:
    row: 17
    column: 8
  fix: ~
- kind:
    InvalidFunctionName: testTest
  location:
    row: 40
    column: 4
  end_location:
    row: 41
    column: 19
  fix: ~

