src/pep8_naming/snapshots/ruff__pep8_naming__tests__N803_N803.py.snap
---
source: src/pep8_naming/mod.rs
expression: checks
---
- kind:
    InvalidArgumentName: A
  location:
    row: 1
    column: 15
  end_location:
    row: 1
    column: 16
  fix: ~
  parent: ~
- kind:
    InvalidArgumentName: A
  location:
    row: 6
    column: 27
  end_location:
    row: 6
    column: 28
  fix: ~
  parent: ~

