src/pep8_naming/snapshots/ruff__pep8_naming__tests__N807_N807.py.snap
---
source: src/pep8_naming/mod.rs
expression: checks
---
- kind: DunderFunctionName
  location:
    row: 1
    column: 0
  end_location:
    row: 2
    column: 8
  fix: ~
- kind: DunderFunctionName
  location:
    row: 14
    column: 4
  end_location:
    row: 15
    column: 12
  fix: ~

