src/pep8_naming/snapshots/ruff__pep8_naming__tests__N813_N813.py.snap
---
source: src/pep8_naming/mod.rs
expression: checks
---
- kind:
    CamelcaseImportedAsLowercase:
      - Camel
      - camel
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 25
  fix: ~
- kind:
    CamelcaseImportedAsLowercase:
      - CamelCase
      - camelcase
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 38
  fix: ~
- kind:
    CamelcaseImportedAsLowercase:
      - AnotherCamelCase
      - another_camelcase
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 53
  fix: ~

