src/pep8_naming/snapshots/ruff__pep8_naming__tests__N814_N814.py.snap
---
source: src/pep8_naming/mod.rs
expression: checks
---
- kind:
    CamelcaseImportedAsConstant:
      - Camel
      - CAMEL
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 25
  fix: ~
- kind:
    CamelcaseImportedAsConstant:
      - CamelCase
      - CAMELCASE
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 38
  fix: ~
- kind:
    CamelcaseImportedAsConstant:
      - AnotherCamelCase
      - ANOTHER_CAMELCASE
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 53
  fix: ~

