src/pep8_naming/snapshots/ruff__pep8_naming__tests__N815_N815.py.snap
---
source: src/pep8_naming/mod.rs
expression: checks
---
- kind:
    MixedCaseVariableInClassScope: mixedCase
  location:
    row: 8
    column: 4
  end_location:
    row: 8
    column: 13
  fix: ~
  parent: ~
- kind:
    MixedCaseVariableInClassScope: _mixedCase
  location:
    row: 9
    column: 4
  end_location:
    row: 9
    column: 14
  fix: ~
  parent: ~
- kind:
    MixedCaseVariableInClassScope: mixed_Case
  location:
    row: 10
    column: 4
  end_location:
    row: 10
    column: 14
  fix: ~
  parent: ~

